# openGauss-for-sw64

./: .gitignore  CMakeLists.txt  GNUmakefile.in  README.md  build.sh  configure
cmake/src/: build_options.cmake
cmake/src/config-in/: pg_config.h.in
config/: config.guess
contrib/: CMakeLists.txt  Makefile
contrib/gms_xmlparser/: CMakeLIsts.txt  Makefile  gms_xmlparser--1.0.sql  gms_xmlparser.control  gms_xmlparser.cpp  xmlparser.h
contrib/gms_xmlparser/expected/: gms_xmlparser.out
contrib/mppdb_decoding/: mppdb_decoding.cpp
contrib/ogai/: CMakeLists.txt  Makefile  ogai--1.0.sql  ogai.control  ogai.cpp
contrib/pagehack/: pagehack.cpp
contrib/pg_archivecleanup/: pg_archivecleanup
contrib/pg_stat_statements/: pg_stat_statements.cpp
contrib/pg_xlogdump/: cfs_mddesc.cpp
contrib/security_plugin/: gs_policy_labels.cpp
contrib/shark/: cmake.sh  datefuncs.cpp  dbcc.cpp  parallel_schedule  pl_reserved_kwlist_d.h  pl_unreserved_kwlist_d.h  shark--3.0.sql  shark.cpp  shark.h  sharksysfuncs.cpp  sharksysfuncs.h  sqlvariant.cpp  uuidfuncs.cpp  varlena.cpp
contrib/test_decoding/: test_decoding.cpp
contrib/wal2json/: LICENSE  Makefile  README.md  check_wal2json.sh  wal2json.cpp
output/: openGauss-Server-7.0.0-RC3-KylinV10-sw_64.sha256  upgrade_sql.sha256
output/openGauss-Symbol-7.0.0-RC3-KylinV10-sw_64.tar.gz.split/: restore.sh
src/: CMakeLists.txt  Makefile.global.in
src/common/port/: Makefile  (+6 more)
src/gausskernel/: CMakeLists.txt  Makefile
src/include/: c.h  cipher.h  gs_thread.h  miscadmin.h  pgstat.h  plpy_util.h  plpython.h  port.h  postgres.h
(+665 files in other folders)
